--- a/index.html
+++ b/index.html
@@ -258,15 +258,11 @@
 
     <div class="site-section bg-light">
       <div class="container">
-        <h3>Our Offer</h3>
-        <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure nesciunt nemo vel earum maxime neque!</p>
+        <h3 style="text-align: center;">Our Offer</h3>
+        <p class="mb-4" style="text-align: center;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure nesciunt nemo vel earum maxime neque!</p>
         <p>
         <div class="row">
-          <div class="col-lg-2">
-              <a href="#" class=" custom-prev" id="arrow1" ><span>&#9668;&#9668;</span></a>              
-            </p>
-          </div>
-          <div class="col-lg-8">
+          <div class="col-lg-8" style="margin: 50px auto;">
 
 
             <!-- Range Rover S64 Coupe -->
@@ -277,7 +273,7 @@
                 <div class="item-1-contents">
                   <div class="text-center">
                   <h3><a href="#">Range Rover S64 Coupe</a></h3>
-                  <div class="rating">
+                  <div class="rating">  
                     <span class="icon-star text-warning"></span>
                     <span class="icon-star text-warning"></span>
                     <span class="icon-star text-warning"></span>
@@ -348,11 +344,7 @@
                   </div>
                 </div>
               </div>
-
             </div> 
-          </div> <div class="col-lg-2">
-            <a href="#" class="custom-next" id="arrow"><span>&#9658;&#9658;</span></a></div>
-        </div>
       </div>
     </div>
 
