--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 
 
-      <header class="site-navbar site-navbar-target" role="banner">
+      <header class="site-navbar site-navbar-target" role="banner"  style="position: fixed;">
 
         <div class="container">
           <div class="row align-items-center position-relative">
@@ -102,7 +102,7 @@
       </header>
 
     <div class="ftco-blocks-cover-1">
-      <div class="ftco-cover-1 overlay" style="background-image: url('images/hero_1.jpg')">
+      <div class="ftco-cover-1 overlay" style="background-image: url('images/hero_1.jpg'); background-attachment: fixed;">
         <div class="container">
           <div class="row align-items-center">
             <div class="col-lg-5">
