--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 
 
-      <header class="site-navbar site-navbar-target" role="banner"  style="position: fixed;">
+      <header class="site-navbar site-navbar-target" role="banner" >
 
         <div class="container">
           <div class="row align-items-center position-relative">
@@ -64,11 +64,6 @@
               
 
               <span class="d-inline-block d-lg-none"><a href="#" class="text-white site-menu-toggle js-menu-toggle py-5 text-white"><span class="icon-menu h3 text-white"></span></a></span>
-
-
-
-
-
 
 
 
@@ -102,7 +97,8 @@
       </header>
 
     <div class="ftco-blocks-cover-1">
-      <div class="ftco-cover-1 overlay" style="background-image: url('images/hero_1.jpg'); background-attachment: fixed;">
+      <div class="ftco-cover-1 overlay">
+        <video src="./images/car.mp4" style="h"></video>
         <div class="container">
           <div class="row align-items-center">
             <div class="col-lg-5">
@@ -154,7 +150,7 @@
                     <h3 class="m-0">Begin your trip here</h3>
                   </div>
                   <div class="col-md-6 text-md-right">
-                    <span class="text-primary">32</span> <span>cars available</span></span>
+                    <span class="text-primary">32</span> <span>cars available</span>
                   </div>
                 </div>
                 <div class="row">
@@ -188,7 +184,7 @@
 
 
 <!-- navbar header abbas -->
-<div class="header_abbas">
+<!-- <div class="header_abbas">
   <div class="container1">
     <div class="navbar">
         <div class="menu">
@@ -241,22 +237,23 @@
     </div>
     <div class="links">
         <ul>
-            <li class="active"><a href="index.html" style="--i: 0.1s" class="nav-link">Home</a></li>
-                  <!-- <li><a href="services.html" style="--i: 0.1s" class="nav-link">Services</a></li> -->
-                  <li><a href="cars.html" style="--i: 0.1s" class="nav-link">Cars</a></li>
-                  <li><a href="about.html" style="--i: 0.1s" class="nav-link">About</a></li>
-                  <!-- <li><a href="blog.html" style="--i: 0.1s" class="nav-link">Blog</a></li> -->
-                  <li><a href="contact.html" style="--i: 0.1s" class="nav-link">Contact</a></li>
+          <li class="active"><a href="index.html" style="--i: 0.1s" class="nav-link">Home</a></li>
+                  <<li><a href="services.html" style="--i: 0.1s" class="nav-link">Services</a></li> 
+                   <li><a href="cars.html" style="--i: 0.1s" class="nav-link">Cars</a></li>
+                   <li><a href="about.html" style="--i: 0.1s" class="nav-link">About</a></li> 
+                   <li><a href="blog.html" style="--i: 0.1s" class="nav-link">Blog</a></li>
+                 <li><a href="contact.html" style="--i: 0.1s" class="nav-link">Contact</a></li> 
         </ul>
     </div>
   </div>
   
-  </div>
+  </div> 
 
 
     <!-- carousel -->
 
     <div class="site-section bg-light">
+      
       <div class="container">
         <h3 style="text-align: center;">Our Offer</h3>
         <p class="mb-4" style="text-align: center;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure nesciunt nemo vel earum maxime neque!</p>
@@ -707,7 +704,9 @@
     <script src="js/aos.js"></script>
 <script src="./js/abbas.js"></script>
     <script src="js/main.js"></script>
+    <script>
 
+    </script>
   </body>
 
 </html>
